new content + navbar+ design

--- a/bands.html
+++ b/bands.html
@@ -6,59 +6,73 @@
   <meta charset="utf-8">
   <link rel="icon" href="TRES LOGO.ico">
 
-  <title>Bands</title>
+  <title>III Incendios Records</title>
   <!-- BOOTSTRAP -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <!-- MY CSS -->
-  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="/Users/dsssct/Desktop/OUTREACH/TRES INCENDIOS SITIO ACTUAL/CSS/style.css">
   <!-- FONTAWESOME -->
   <script src="https://kit.fontawesome.com/70d98cf736.js" crossorigin="anonymous"></script>
   <!-- GOOGLE FONTS -->
   <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@700&family=Source+Sans+Pro&family=Spectral:wght@700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Spectral:wght@800&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 
 <body>
 
-    <nav class="navbar sticky-top navbar-expand-xl navbar-light">
+  <!-- CONTAINER 1 -->
 
-      <a class="navbar-brand" href="index.html">TRES INCENDIOS RECORDS</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="releases.html">Lanzamientos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="bands.html">Bandas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">Arte</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">Letras</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">Reseñas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html#nosotros">Nosotros</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="info.html">Conectemos</a>
-          </li>
+  <nav class="navbar sticky-top navbar-expand-xl  navbar-light">
 
-        </ul>
-      </div>
+    <a class="navbar-brand" href="/Users/dsssct/Desktop/OUTREACH/TRES INCENDIOS SITIO ACTUAL/index.html">TRES INCENDIOS RECORDS</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            The Label
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="nav-link" href="/Users/dsssct/Desktop/OUTREACH/TRES INCENDIOS SITIO ACTUAL/releases.html">Lanzamientos</a>
+            <a class="nav-link" href="/Users/dsssct/Desktop/OUTREACH/TRES INCENDIOS SITIO ACTUAL/bands.html">Bandas</a>
+          </div>
+        </li>
+        <!-- <li class="nav-item">
+          <a class="nav-link" href="#contact-me">Visuales</a>
+        </li> -->
 
-    </nav>
+        <li class="nav-item ">
+          <a class="nav-link" href="#contact-me"></a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Alejandría
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item container-fluid nav-link" href="/Users/dsssct/Desktop/OUTREACH/TRES INCENDIOS SITIO ACTUAL/category/resenas/resenas.html">Reseñas musicales</a>
+            <!-- <a class="dropdown-item container-fluid nav-link" href="opinión.html">Opinión</a> -->
+            <a class="dropdown-item container-fluid nav-link" href="category/divagaciones/divagaciones.html">Divagaciones</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/Users/dsssct/Desktop/OUTREACH/TRES INCENDIOS SITIO ACTUAL/index.html#nosotros">Nosotros</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/Users/dsssct/Desktop/OUTREACH/TRES INCENDIOS SITIO ACTUAL/info.html">Conectemos</a>
+        </li>
+
+      </ul>
+    </div>
+
+  </nav>
+
 
   <div class="lighter" id="artistas-bandas">
+
 
     <div>
 
@@ -76,9 +90,10 @@
 
       <img class="artist" src="images/THE_CLUSTER.jpeg" alt="">
       <h3> <strong>The_Cluster</strong></h3>
-<p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique senectus et netus et malesuada fames ac. Adipiscing at in tellus integer feugiat scelerisque varius morbi enim. Nulla aliquet porttitor lacus luctus accumsan. Orci sagittis eu volutpat odio facilisis mauris sit..
-</p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique senectus et netus et malesuada fames ac. Adipiscing at in tellus integer feugiat scelerisque varius morbi
+        enim. Nulla aliquet porttitor lacus luctus accumsan. Orci sagittis eu volutpat odio facilisis mauris sit..
+      </p>
     </div>
 
 
@@ -96,15 +111,17 @@
       <img class="artist" src="images/GOLDENROD.jpg" alt="">
       <h3> <strong>Goldenrod</strong></h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique senectus et netus et malesuada fames ac. Adipiscing at in tellus integer feugiat scelerisque varius morbi enim. Nulla aliquet porttitor lacus luctus accumsan. Orci sagittis eu volutpat odio facilisis mauris sit..
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique senectus et netus et malesuada fames ac. Adipiscing at in tellus integer feugiat scelerisque varius morbi
+        enim. Nulla aliquet porttitor lacus luctus accumsan. Orci sagittis eu volutpat odio facilisis mauris sit..
       </p>
     </div>
 
     <div>
       <img class="artist" src="images/SADKO.jpg" alt="">
-      <h3> <strong>SADKÓ</strong>  </h3>
+      <h3> <strong>SADKÓ</strong> </h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique senectus et netus et malesuada fames ac. Adipiscing at in tellus integer feugiat scelerisque varius morbi enim. Nulla aliquet porttitor lacus luctus accumsan. Orci sagittis eu volutpat odio facilisis mauris sit..
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique senectus et netus et malesuada fames ac. Adipiscing at in tellus integer feugiat scelerisque varius morbi
+        enim. Nulla aliquet porttitor lacus luctus accumsan. Orci sagittis eu volutpat odio facilisis mauris sit..
       </p>
 
     </div>
@@ -113,7 +130,8 @@
       <img class="artist" src="images/SECRETISMO.jpg" alt="">
       <h3> <strong>Secretismo</strong></h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique senectus et netus et malesuada fames ac. Adipiscing at in tellus integer feugiat scelerisque varius morbi enim. Nulla aliquet porttitor lacus luctus accumsan. Orci sagittis eu volutpat odio facilisis mauris sit..
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique senectus et netus et malesuada fames ac. Adipiscing at in tellus integer feugiat scelerisque varius morbi
+        enim. Nulla aliquet porttitor lacus luctus accumsan. Orci sagittis eu volutpat odio facilisis mauris sit..
       </p>
     </div>
 
@@ -122,7 +140,8 @@
       <img class="artist" src="images/SXMBRXS.jpg" alt="">
       <h3> <strong>Sombras</strong></h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique senectus et netus et malesuada fames ac. Adipiscing at in tellus integer feugiat scelerisque varius morbi enim. Nulla aliquet porttitor lacus luctus accumsan. Orci sagittis eu volutpat odio facilisis mauris sit..
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique senectus et netus et malesuada fames ac. Adipiscing at in tellus integer feugiat scelerisque varius morbi
+        enim. Nulla aliquet porttitor lacus luctus accumsan. Orci sagittis eu volutpat odio facilisis mauris sit..
       </p>
     </div>
 
@@ -131,7 +150,8 @@
       <img class="artist" src="images/TRIVM.jpg" alt="">
       <h3> <strong>Trivmvirs</strong></h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique senectus et netus et malesuada fames ac. Adipiscing at in tellus integer feugiat scelerisque varius morbi enim. Nulla aliquet porttitor lacus luctus accumsan. Orci sagittis eu volutpat odio facilisis mauris sit..
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique senectus et netus et malesuada fames ac. Adipiscing at in tellus integer feugiat scelerisque varius morbi
+        enim. Nulla aliquet porttitor lacus luctus accumsan. Orci sagittis eu volutpat odio facilisis mauris sit..
       </p>
     </div>
 
@@ -139,7 +159,7 @@
   </div>
 
 
-  <footer class="dark" id="bottom-container">
+  <footer id="bottom-container">
 
 
     <div class="container-fluid">
