--- a/index.html
+++ b/index.html
@@ -10,47 +10,61 @@
   <!-- BOOTSTRAP -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <!-- MY CSS -->
-  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="/Users/dsssct/Desktop/OUTREACH/TRES INCENDIOS SITIO ACTUAL/CSS/style.css">
   <!-- FONTAWESOME -->
   <script src="https://kit.fontawesome.com/70d98cf736.js" crossorigin="anonymous"></script>
   <!-- GOOGLE FONTS -->
   <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@700&family=Source+Sans+Pro&family=Spectral:wght@700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Spectral:wght@800&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
 
+  <link href="https://fonts.googleapis.com/css2?family=Spectral:wght@800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 
 <body>
-  <!-- CONTAINER 1 -->
-  <nav class="navbar sticky-top navbar-expand-xl navbar-light">
 
-    <a class="navbar-brand" href="">TRES INCENDIOS RECORDS</a>
+  <!-- CONTAINER 1 -->
+
+  <nav class="navbar sticky-top navbar-expand-xl  navbar-light">
+
+    <a class="navbar-brand" href="/Users/dsssct/Desktop/OUTREACH/TRES INCENDIOS SITIO ACTUAL/index.html">TRES INCENDIOS RECORDS</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="releases.html">Lanzamientos</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            The Label
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="nav-link" href="/Users/dsssct/Desktop/OUTREACH/TRES INCENDIOS SITIO ACTUAL/releases.html">Lanzamientos</a>
+            <a class="nav-link" href="/Users/dsssct/Desktop/OUTREACH/TRES INCENDIOS SITIO ACTUAL/bands.html">Bandas</a>
+          </div>
+        </li>
+        <!-- <li class="nav-item">
+          <a class="nav-link" href="#contact-me">Visuales</a>
+        </li> -->
+
+        <li class="nav-item ">
+          <a class="nav-link" href="#contact-me"></a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Alejandría
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item container-fluid nav-link" href="/Users/dsssct/Desktop/OUTREACH/TRES INCENDIOS SITIO ACTUAL/category/resenas/resenas.html">Reseñas musicales</a>
+            <!-- <a class="dropdown-item container-fluid nav-link" href="opinión.html">Opinión</a> -->
+            <a class="dropdown-item container-fluid nav-link" href="/Users/dsssct/Desktop/OUTREACH/TRES INCENDIOS SITIO ACTUAL/category/divagaciones/divagaciones.html">Divagaciones</a>
+          </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="bands.html">Bandas</a>
+          <a class="nav-link" href="/Users/dsssct/Desktop/OUTREACH/TRES INCENDIOS SITIO ACTUAL/index.html#nosotros">Nosotros</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#contact-me">Arte</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#contact-me">Letras</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#contact-me">Reseñas</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#nosotros">Nosotros</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#contact-me">Conectemos</a>
+          <a class="nav-link" href="/Users/dsssct/Desktop/OUTREACH/TRES INCENDIOS SITIO ACTUAL/info.html">Conectemos</a>
         </li>
 
       </ul>
@@ -60,11 +74,11 @@
 
 
 
-  <div class="container-fluid top dark">
+  <div class="container-fluid top">
 
     <div class="row" id="cabeza">
       <div class="description col-xl-6 col-lg-12">
-        <h1 class="big-heading">Producción y difusión de bandas alternativas.</h1>
+        <h1 class="big-heading">Producción y difusión de creaciones alternativas.</h1>
         <button type="button" class=" bandcamp btn-outline-dark btn btn-lg btn-link btn-sm"><a href="https://tres-incendios-temporales.bandcamp.com/" class="INFO"><i class="fab fa-bandcamp"></i> LISTEN AND SUPPORT</a></button>
       </div>
 
@@ -75,6 +89,89 @@
     </div>
   </div>
   </div>
+
+
+
+
+
+
+
+  <section id="news">
+    <div class="container-fluid">
+
+      <div class="row">
+
+        <div class="  col-xl-8 col-md-12 featured">
+          <a href="/Users/dsssct/Desktop/OUTREACH/TRES INCENDIOS SITIO ACTUAL/category/divagaciones/divagaciones.html#uno">
+            <div class="card">
+              <div class="card-header dark">
+                <img class="art" src="/Users/dsssct/Desktop/OUTREACH/TRES INCENDIOS SITIO ACTUAL/category/images/ALBUM godspeedyourblackemperor .png" alt="">
+              </div>
+              <div class="card-body news-entry light">
+                <h3>Fa sostenido. La sostenido. Infinto.</h3>
+                <p class=" text-preview">ANA RVSH cristaliza, en un bello dibujo y poema, impresiones desencadenadas al escuchar <strong>F♯ A♯ ∞</strong>, album debut de los canadienses <strong>Goodspeed you! Black Emperor</strong>.</p>
+              </div>
+            </div>
+          </a>
+        </div>
+
+
+        <div class=" col-xl-4 col-md-12 ">
+          <br>
+          <div class="col-xl-12  art dark">
+            <a href="/Users/dsssct/Desktop/OUTREACH/TRES INCENDIOS SITIO ACTUAL/category/resenas/resenas.html#resenasUno">
+              <div class="card">
+
+                <div class="card-header lighter">
+                  El dreampop es un género alternativo que de entrada atrapa, invita a lanzarnos a un abismo de emociones con melodías suaves, guitarras distorsionadas y letras apasionadas; precisamente ese carácter emocional es lo que lo hace
+                  tan atractivo y nos deja con sed de más. Dicho esto, la siguiente es una banda sinónimo de eso: sentimentalismo. [...]
+                </div>
+
+                <div class="card-body news-entry light">
+                  <h3>Sobre Beach House y su dreampop
+                  </h3>
+                  <p class="text-preview">
+                    La primera de una venidera serie de reseñas musicales... Lo tiene bien ganado la banda que la abre.
+                    <br>
+                    <em class="artist-release">Por Melissa Niño</em>
+                  </p>
+                </div>
+            </a>
+          </div>
+          <br>
+          <div class=" art col-xl-12  art dark ">
+            <a href="/Users/dsssct/Desktop/OUTREACH/TRES INCENDIOS SITIO ACTUAL/category/divagaciones/divagaciones.html#dos">
+              <div class="card">
+                <div class="card-header lighter">
+                  La angustia se hace más grande en la madrugada. A mi lado una cama mal oliente. Una ventana que da a la calle, la luz de un poste se cuela entre la cortina. Estoy en el borde sin dormir, sin despertar. Hace tiempo le entregué
+                  completamente mi alma a la desesperanza. Ahora no deseo escapar. El encierro me está enloqueciendo, sin embargo [...]
+                </div>
+                <div class="card-body news-entry light">
+                  <h3>
+                    Ciudad de hombres lobo
+                  </h3>
+                  <p class="text-preview">
+                    Un escrito corto sobre la levedad del ser, mas una playlist curada por el mismo Fernando Saldaña - su artífice. Atmosfera que deja una sensación de querer adentrarse en las profundidades de sí.
+                  </p>
+                </div>
+            </a>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+    </div>
+
+
+
+  </section>
+
+
 
   <!-- LANZAMIENTOS -->
   <section class="light" id="releases">
@@ -231,18 +328,18 @@
       <div>
         <img class="bioimg" src="https://image.flaticon.com/icons/svg/1963/1963720.svg" alt="mxr">
         <h3 class="subtitle">La historia</h3>
-        <p>En 2017 Niebla Páramo y Desasociado formaron <bold>T I R</bold> como primera plataforma para difundir sus proyectos musicales:
+        <p>En 2017 Niebla Páramo y Desasociado formaron Tres Incendios como primera plataforma para difundir sus proyectos musicales:
           <a href="https://www.facebook.com/sombraspost/">Sombras</a> y <a href="https://www.facebook.com/Sadkosadkosadko/">Sadkó</a> fueron las primeras bandas producidas por el sello, y las que abrieron el camino para patrocinar más proyectos
           luego.</p>
         <p>
-          Tres incendios temporales ha participado en la organización directa o inderecta de diversos eventos
-          en la escena Underground bogotana desde entonces, con el ánimo de apoyar las bandas locales y las
-          marcas de diseño independientes de la ciudad.
+          Tres Incendios ha participado en la organización directa e inderecta de diversos eventos
+          <em>underground</em> en Bogotá desde entonces con ánimo de apoyar las bandas y
+          marcas de diseño de la ciudad.
         </p>
 
         <img class="misionimg" src="https://image.flaticon.com/icons/svg/114/114707.svg" alt="pnk">
         <h3 class="subtitle">La misión</h3>
-        <p>III Incendios como plataforma creativa multidimensional</p>
+        <p>Tres Incendios como plataforma creativa multidimensional</p>
       </div>
     </div>
 
@@ -258,7 +355,7 @@
 
   <!-- REDES -->
 
-  <footer class="dark" id="bottom-container">
+  <footer id="bottom-container">
 
 
     <div class="container-fluid">
