--- a/info.html
+++ b/info.html
@@ -2,62 +2,73 @@
 <html lang="en" dir="ltr">
 
 <head>
+
   <meta charset="utf-8">
   <link rel="icon" href="TRES LOGO.ico">
 
-  <title>our info</title>
+  <title>III Incendios Records</title>
+  <!-- BOOTSTRAP -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <!-- MY CSS -->
-  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="/Users/dsssct/Desktop/OUTREACH/TRES INCENDIOS SITIO ACTUAL/CSS/style.css">
   <!-- FONTAWESOME -->
   <script src="https://kit.fontawesome.com/70d98cf736.js" crossorigin="anonymous"></script>
   <!-- GOOGLE FONTS -->
   <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@700&family=Source+Sans+Pro&family=Spectral:wght@700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Spectral:wght@800&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@400;700&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 
 <body>
 
+  <!-- CONTAINER 1 -->
 
-  <nav class="navbar sticky-top navbar-expand-xl navbar-light">
+  <nav class="navbar sticky-top navbar-expand-xl  navbar-light">
 
-    <a class="navbar-brand" href="index.html">TRES INCENDIOS RECORDS</a>
+    <a class="navbar-brand" href="/Users/dsssct/Desktop/OUTREACH/TRES INCENDIOS SITIO ACTUAL/index.html">TRES INCENDIOS RECORDS</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="releases.html">Lanzamientos</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            The Label
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="nav-link" href="/Users/dsssct/Desktop/OUTREACH/TRES INCENDIOS SITIO ACTUAL/releases.html">Lanzamientos</a>
+            <a class="nav-link" href="/Users/dsssct/Desktop/OUTREACH/TRES INCENDIOS SITIO ACTUAL/bands.html">Bandas</a>
+          </div>
+        </li>
+        <!-- <li class="nav-item">
+          <a class="nav-link" href="#contact-me">Visuales</a>
+        </li> -->
+
+        <li class="nav-item ">
+          <a class="nav-link" href="#contact-me"></a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Alejandría
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item container-fluid nav-link" href="/Users/dsssct/Desktop/OUTREACH/TRES INCENDIOS SITIO ACTUAL/category/resenas/resenas.html">Reseñas musicales</a>
+            <!-- <a class="dropdown-item container-fluid nav-link" href="opinión.html">Opinión</a> -->
+            <a class="dropdown-item container-fluid nav-link" href="/Users/dsssct/Desktop/OUTREACH/TRES INCENDIOS SITIO ACTUAL/category/divagaciones/divagaciones.html">Divagaciones</a>
+          </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="bands.html">Bandas</a>
+          <a class="nav-link" href="/Users/dsssct/Desktop/OUTREACH/TRES INCENDIOS SITIO ACTUAL/index.html#nosotros">Nosotros</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">Arte</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="">Letras</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="">Reseñas</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="index.html#nosotros">Nosotros</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="info.html">Conectemos</a>
+          <a class="nav-link" href="/Users/dsssct/Desktop/OUTREACH/TRES INCENDIOS SITIO ACTUAL/info.html">Conectemos</a>
         </li>
 
       </ul>
     </div>
 
   </nav>
-
-  </section>
 
   <section class="container-fluid" id="our-info">
 
@@ -78,9 +89,12 @@
 
     </form>
 
+
+
+
   </section>
 
-  <footer class="dark" id="bottom-container">
+  <footer id="bottom-container">
 
 
     <div class="container-fluid">
@@ -97,18 +111,10 @@
 
 
 
-
-
-
-
-
-
-
-  <!-- BOOTSTRAP JAVASCRIPT -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
 </body>
+<!-- BOOTSTRAP JAVASCRIPT -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </html>
